--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       rel="stylesheet"
     /> -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" href="%PUBLIC_URL%/atm.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/atm.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/SwiftCorePe.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -23,7 +24,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
    
-    <title>ATM Admin Portal</title>
+    <title>Vakrangee</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
